--- a/refactoring-ch7/index.html
+++ b/refactoring-ch7/index.html
@@ -307,7 +307,7 @@ template: inverse
 
 ## Open Questions
 ---
-# Principles taken away
+# Open Questions
 
 1. Why do we refactor our code?
 2. Can we apply refactorings to .red[non]-object-oriented programs
